Table users {
  id varchar [primary key]
  name varchar [not null]
  email varchar [not null, unique]
  email_verified boolean [not null, default: false]
  image varchar
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table session {
  id varchar [primary key]
  expires_at timestamp [not null]
  token varchar [not null, unique]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  ip_address varchar
  user_agent varchar
  user_id varchar [not null, ref: > users.id]
}

Table account {
  id varchar [primary key]
  account_id varchar [not null]
  provider_id varchar [not null]
  user_id varchar [not null, ref: > users.id]
  access_token varchar
  refresh_token varchar
  id_token varchar
  access_token_expires_at timestamp
  refresh_token_expires_at timestamp
  scope varchar
  password varchar
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table verification {
  id varchar [primary key]
  identifier varchar [not null]
  value varchar [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table call {
  id varchar [primary key]
  user_id varchar [ref: > users.id]
  status varchar
  analysis_data json [note: 'transcript, professionalism, call_flow_management, accuracy_completeness, caller_experience, turn_annotator, final_analysis']
  assembly_data json
  s3_key varchar
  created_at timestamp
}